--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "console": "internalConsole"
         },
         {
-            "name": ".NET Core Launch (web)",
+            "name": ".NET Core Launch (profile web)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
@@ -24,6 +24,48 @@
             "program": "${workspaceFolder}/e_dipin_profile_api/bin/Debug/net5.0/e_dipin_profile_api.dll",
             "args": [],
             "cwd": "${workspaceFolder}/e_dipin_profile_api",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            }
+        },
+        {
+            "name": ".NET Core Launch (post web)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "requireExactSource": false,
+            "program": "${workspaceFolder}/e_dipin_post_api/bin/Debug/net5.0/e_dipin_post_api.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/e_dipin_post_api",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            }
+        },
+        {
+            "name": ".NET Core Launch (comment web)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "requireExactSource": false,
+            "program": "${workspaceFolder}/e_dipin_comment_api/bin/Debug/net5.0/e_dipin_comment_api.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/e_dipin_comment_api",
             "stopAtEntry": false,
             "serverReadyAction": {
                 "action": "openExternally",
